chore: atualização do spring boot para a versão 4